[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = 39
add_imports = ["from __future__ import annotations"]
no_lines_before = ["FIRSTPARTY"]
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.poetry]
name = "filemaker-backups"
version = "0.1.0"
description = ""
authors = ["Jan Zeleny <jan@zeleny.io>"]
readme = "README.md"
packages = [{include = "filemaker_backups"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.54"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
